--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vue-admin-template",
-  "version": "4.4.0",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "name": "dita-cmdb",
+  "version": "1.0",
+  "description": "dita-cmdb",
+  "author": "snowstop555 <snowstop555@126.com>",
+  "proxy": "http://192.168.103.23:8089",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
